# VulkanPlayground

./: .gitignore  README.md
next_steps/: README.md  main.c
next_steps/helpers/: CMakeLists.txt  render.c  sync.c  vulkan_device.c  vulkan_instance.c  window.c
next_steps/include/: main.h
next_steps/include/helpers/: graphics.h  render.h  sync.h  vulkan_device.h
next_steps/shaders/: compile.sh
template/: CMakeLists.txt  main.c
template/include/: main.h
triangle/: CMakeLists.txt  README.md  main.c
triangle/helpers/: CMakeLists.txt  graphics.c  render.c  sync.c  vulkan_device.c  vulkan_instance.c  window.c
triangle/include/: main.h
triangle/include/helpers/: render.h  vulkan_device.h  vulkan_instance.h  window.h
triangle/shaders/: shader.slang  slang.spv
